--- a/TestingApp/app/src/main/AndroidManifest.xml
+++ b/TestingApp/app/src/main/AndroidManifest.xml
@@ -13,17 +13,21 @@
         android:theme="@style/Theme.TestingApp"
         tools:targetApi="31">
         <activity
+            android:name=".splashScreen"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+        <activity
             android:name=".secondActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
